--- a/Backend_Node_js/1st_Express/views/index.pug
+++ b/Backend_Node_js/1st_Express/views/index.pug
@@ -25,7 +25,7 @@ style
         <!-- <p id="para">
             | #{content}
         </p> -->
-        <form action="/" id="contact">
+        <form action="/" method="POST"  id="contact">
             <input type="text" name="name" id="name" placeholder="Enter your name"> 
             <input type="text" name="age" id="age" placeholder="Enter you age"> 
             <input type="text" name="gender" id="gender" placeholder="Enter you gender"> 
