--- a/Backend_Node_js/1st_Express/views/index.pug
+++ b/Backend_Node_js/1st_Express/views/index.pug
@@ -12,9 +12,9 @@ style
 <body>
     <nav>
         <ul>
-            <li><a href='/'></a>Home</li>
-            <li><a href='/'></a>About</li>
-            <li><a href='/'></a>Contact us</li>
+            <li><a href='/'>Home</a></li>
+            <li><a href='/'>About</a></li>
+            <li><a href='/'>Contact us</a></li>
         </ul>
     </nav>
     <div class="container">
@@ -22,10 +22,10 @@ style
         <h1 id="h1">
             | #{h1}
         </h1>
-        <!-- <p id="para">
+        <p id="para">
             | #{content}
         </p> 
-        <form action="/" method="POST" id="contact">
+        <form action="/index" method="post" id="contact">
             <input type="text" name="name" id="name" placeholder="Enter your name"> 
             <input type="text" name="age" id="age" placeholder="Enter you age"> 
             <input type="text" name="gender" id="gender" placeholder="Enter you gender"> 
@@ -34,5 +34,5 @@ style
             <button class="btn">Submit</button>
         </form>
     </div>
-    </body>
+    </body> 
 </html>
