full front end form

--- a/Full/style.css
+++ b/Full/style.css
@@ -16,7 +16,7 @@
     background-color: #fff;
     width: 500px;
     padding: 25px;
-    margin: 25px auto 0;
+    margin: 25px 100px 0;
     box-shadow: 0px 0px 20px rgba(0,0,0,0.5);
   }
   .wrapper h2{
