--- a/Backend_Node_js/Express_assignment/views/home.html
+++ b/Backend_Node_js/Express_assignment/views/home.html
@@ -15,5 +15,10 @@
     </nav>
     <h1>Home Page</h1>
 
+    <form action="/user" method="GET">
+        <input type="text" placeholder="Enter a product" name="title">
+        <button type="submit">submit</button>
+    </form>
+
 </body>
 </html>
